Doing bayes decision part

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,6 +48,9 @@
    "source": [
     "item = X_train[i]\n",
     "label = y_train[i]\n",
+    "# print(X_val[i])\n",
+    "# print(y_val[i])\n",
+    "\n",
     "\n",
     "plt.plot(item)\n",
     "plt.title(f\"id={i}; label = {label}\")\n",
@@ -56,11 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.04526398349896412\n"
+     ]
+    }
+   ],
    "source": [
-    "i += 1"
+    "i += 1\n",
+    "print(X_train[:,77].var())"
    ]
   }
  ],
